update login handling

--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -5,4 +5,5 @@
   --color-bg-primary: #111121;
   --color-text-primary: #fff;
   --color-text-secondary: #9ca3af;
+  --color-bg-secondary: #1919e6;
 }
