--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -15,6 +15,7 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
+    'Space Grotesk',
     Inter,
     -apple-system,
     BlinkMacSystemFont,
